# server/docs/swagger.json
@@ -59,12 +59,12 @@
                 "summary": "Dump the database.",
                 "parameters": [
                     {
-                        "description": "dump params",
+                        "description": "future: dump params",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.DumpRequest"
+                            "$ref": "#/definitions/main.Empty"
                         }
                     }
                 ],
@@ -80,16 +80,8 @@
         }
     },
     "definitions": {
-        "main.DumpRequest": {
-            "type": "object",
-            "properties": {
-                "database": {
-                    "type": "string"
-                },
-                "user": {
-                    "type": "string"
-                }
-            }
+        "main.Empty": {
+            "type": "object"
         },
         "main.Response": {
             "type": "object",
